--- a/SemesterProject/RaspberryPi/OrchestratorService/Dockerfile
+++ b/SemesterProject/RaspberryPi/OrchestratorService/Dockerfile
@@ -1,5 +1,27 @@
-﻿FROM mcr.microsoft.com/dotnet/runtime:6.0 AS final
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /app
-ARG TARGETARCH
-ADD ./${TARGETARCH}.tar /app
+COPY *.sln .
+COPY src/OrchestratorService/*.csproj ./src/OrchestratorService/
+COPY test/OrchestratorService.Tests/*.csproj ./test/OrchestratorService.Tests/
+RUN dotnet restore
+
+COPY . .
+RUN dotnet build
+
+FROM build AS testrunner
+WORKDIR /app/test/OrchestratorService.Tests
+CMD ["dotnet", "test", "--logger:trx"]
+
+FROM build AS test
+WORKDIR /app/test/OrchestratorService.Tests
+RUN dotnet test --logger:trx
+
+FROM build AS publish
+WORKDIR /app/src/OrchestratorService
+RUN dotnet publish -c Release -o out
+
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
+WORKDIR /app
+COPY --from=publish /app/src/OrchestratorService/out ./
+EXPOSE 5000
 ENTRYPOINT ["dotnet", "OrchestratorService.dll"]
