--- a/.github/workflows/orchestrator-service-docker.yml
+++ b/.github/workflows/orchestrator-service-docker.yml
@@ -5,7 +5,7 @@ on:
     paths:
     - 'SemesterProject/RaspberryPi/OrchestratorService/**'
     branches:
-      - main
+      - master
     tags:
       - 'v*'
     
